<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:animateLayoutChanges="true"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/user_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textAppearance="?attr/textAppearanceBody1"
                            android:textSize="16sp"
                            android:visibility="gone"
                            tools:text="Current user list"
                            tools:visibility="visible" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_layout_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/channel_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/channel_name_hint" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/join_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="24dp"
                            android:text="@string/join_channel" />

                        <Button
                            android:id="@+id/leave_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="8dp"
                            android:text="@string/leave_channel" />

                        <Button
                            android:id="@+id/mute_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="8dp"
                            android:text="@string/mute" />

                        <Button
                            android:id="@+id/speaker_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="8dp"
                            android:text="@string/speaker" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>